[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Enemy_Abilities/yellow_projectile.png" type="Texture" id=1]
[ext_resource path="res://Enemy_Elements/Ability_Types/PurpleAttack3.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.09902

[node name="PurpleAttack3" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_PurpleAttack3_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PurpleAttack3_body_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
